--- a/docs.html
+++ b/docs.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- we provide is specification here -->
-    <redoc spec-url='http://localhost:3000/swagger.json' expand-responses="all"></redoc>
+    <redoc spec-url='http://localhost:3000/docs/swagger.json' expand-responses="all"></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
